--- a/org/core.org
+++ b/org/core.org
@@ -368,11 +368,10 @@ docker exec -it alt-s6-naviserver /bin/bash
           run: |
             echo  ${{ secrets.DOCKERHUB_TOKEN }} | docker login --username ${{ secrets.DOCKERHUB_USERNAME }} --password-stdin
 
-        - name: s6v3. Naviserver. Build and push image.
+        - name: Naviserver. Build and push image.
           run: |
             echo "::group::Prepare environment"
             set -a; source ${GITHUB_WORKSPACE}/src/VERSIONS ; set +a;
-            export IMAGE_TAG="${BASE_IMAGE_TAG}-${NS_IMAGE_TAG}"
             cd ${GITHUB_WORKSPACE}/src/hook
             echo "::endgroup::"
             echo "::group::Build image"
@@ -381,7 +380,6 @@ docker exec -it alt-s6-naviserver /bin/bash
             echo "::group::Push image"
             ./push.sh
             echo "::endgroup::"
-
 #+end_src
 ** ../.github/workflows/test.yaml :code:
 :PROPERTIES:
