--- a/org/core.org
+++ b/org/core.org
@@ -537,13 +537,14 @@ docker exec -it alt-s6-naviserver /bin/bash
       THREAD_VERSION \
       XOTCL_VERSION
 
-  # ** Copy naviserver and locales en_US and ru_RU
+  # ** Copy naviserver and locales en_US and ru_RU and pg_isready
   WORKDIR /
   COPY --from=build /usr/local/ns /usr/local/ns/
   COPY --from=build /usr/lib/locale/en_US /usr/lib/locale/en_US
   COPY --from=build /usr/lib/locale/en_US.utf8 /usr/lib/locale/en_US.utf8
   COPY --from=build /usr/lib/locale/ru_RU /usr/lib/locale/ru_RU
   COPY --from=build /usr/lib/locale/ru_RU.utf8 /usr/lib/locale/ru_RU.utf8
+  COPY --from=build /usr/bin/pg_isready /usr/bin/pg_isready
 
   # ** Labels
   # hadolint ignore=DL3048
@@ -578,6 +579,7 @@ docker exec -it alt-s6-naviserver /bin/bash
       && mkdir /var/lib/apt/lists/partial \
       && apt-get update \
       && apt-get -y install libssl-devel libpq5-devel wget \
+      && rm -r /usr/share/man/* \
       && apt-get clean \
       && rm -rf /var/lib/apt/lists \
             /var/cache/apt/archives/*.rpm  \
